--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full antialiased scroll-smooth dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta lang="pl-PL" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="w-full bg-background">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
